feat: PropertyRowMapper