@@ -1,5 +1,6 @@
 package nextstep.jdbc;
 
+import nextstep.jdbc.exception.DataAccessException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -8,6 +9,7 @@ import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -22,9 +24,7 @@ public class JdbcTemplate {
 
     public void update(final String sql, final List<Object> params) {
         try (final Connection con = dataSource.getConnection();
-             final PreparedStatement pstmt = con.prepareStatement(sql)) {
-
-            setPstmtParams(pstmt, params);
+             final PreparedStatement pstmt = createPreparedStatement(con, sql, params)) {
 
             pstmt.executeUpdate();
         } catch (final SQLException exception) {
@@ -33,31 +33,50 @@ public class JdbcTemplate {
         }
     }
 
-    public <T> T executeQuery(final String sql, final RowMapper<T> rowMapper) {
-        return executeQuery(sql, Collections.emptyList(), rowMapper);
+    public void update(final String sql, final Object... params) {
+        this.update(sql, List.of(params));
     }
 
-    public <T> T executeQuery(final String sql, final List<Object> params,final RowMapper<T> rowMapper) {
-        try (final Connection con = dataSource.getConnection();
-             final PreparedStatement pstmt = con.prepareStatement(sql);
-             final ResultSet rs = createResultSet(pstmt, params)) {
+    public <T> T executeForObject(final String sql, final RowMapper<T> rowMapper) {
+        return executeForObject(sql, Collections.emptyList(), rowMapper);
+    }
 
-            return rowMapper.mapRow(rs);
+    public <T> T executeForObject(final String sql, final List<Object> params, final RowMapper<T> rowMapper) {
+        try (final Connection con = dataSource.getConnection();
+             final PreparedStatement pstmt = createPreparedStatement(con, sql, params);
+             final ResultSet rs = pstmt.executeQuery()) {
+
+            if (rs.next()) {
+                return rowMapper.mapRow(rs);
+            }
+            return null;
         } catch (final SQLException exception) {
             logger.error(exception.toString());
             throw new DataAccessException(exception);
         }
     }
 
-    private ResultSet createResultSet(final PreparedStatement pstmt, final List<Object> params) throws SQLException {
-        setPstmtParams(pstmt, params);
-        return pstmt.executeQuery();
-    }
+    public <T> List<T> executeForList(final String sql, final List<Object> params, final RowMapper<T> rowMapper) {
+        try (final Connection con = dataSource.getConnection();
+             final PreparedStatement pstmt = createPreparedStatement(con, sql, params);
+             final ResultSet rs = pstmt.executeQuery()) {
 
-    private void setPstmtParams(final PreparedStatement pstmt, final List<Object> params) throws SQLException {
-        for (int i = 0; i < params.size(); i++) {
-            pstmt.setObject(i + 1, params.get(i));
+            final List<T> results = new ArrayList<>();
+            while (rs.next()) {
+                results.add(rowMapper.mapRow(rs));
+            }
+            return results;
+        } catch (final SQLException exception) {
+            logger.error(exception.toString());
+            throw new DataAccessException(exception);
         }
     }
 
+    private PreparedStatement createPreparedStatement(final Connection con, final String sql, final List<Object> params) throws SQLException {
+        final PreparedStatement pstmt = con.prepareStatement(sql);
+        for (int i = 0; i < params.size(); i++) {
+            pstmt.setObject(i + 1, params.get(i));
+        }
+        return pstmt;
+    }
 }
